--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Mainmenu.Mainmenu
-EditorStartupMap=/Game/Mainmenu.Mainmenu
+EditorStartupMap=/Game/MapaDisco.MapaDisco
 TransitionMap=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -75,4 +75,8 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/UnrealEd.CookerSettings]
+BlueprintComponentDataCookingMethod=Disabled
+BlueprintPropertyGuidsCookingMethod=Disabled
 
