--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -80,3 +80,6 @@ ManualIPAddress=
 BlueprintComponentDataCookingMethod=Disabled
 BlueprintPropertyGuidsCookingMethod=Disabled
 
+[/Script/NavigationSystem.RecastNavMesh]
+bForceRebuildOnLoad=True
+
